fixes long username overflow

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -9,7 +9,7 @@
   }
 
   .logosection-main-right01 ul li {
-    max-width: 100px;
+    max-width: 180px;
   }
 
   .logosection-main {
